mobile landscape view alignment fix

--- a/src/components/commons/About.css
+++ b/src/components/commons/About.css
@@ -41,7 +41,7 @@ img {
   font-size: 18px;
   max-width: 450px;
 }
-.about-text p mark {
+.about-page p mark {
   font-weight: 600;
   color: #20247b;
 }
